# stringpool

./: CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  vcpkg.json
cmake/: asan.cmake  tsan.cmake
include/stringpool/: stringpool.h
src/: char_iterator.cpp  default_allocator.cpp  hash.cpp  pack_utils.cpp  reverse_char_iterator.cpp  reverse_tree_walker.cpp  statistics.cpp  string_handle.cpp  stringpool.cpp  tree_walker.cpp
src/include/: default_allocator.h  hash.h  pack_utils.h
test/: CMakeLists.txt
test/src/: AllocatorTests.cpp  AssignTests.cpp  BasicTests.cpp  CharIteratorTests.cpp  CrossPool.cpp  GrowTableTests.cpp  HashTests.cpp  MemcmpTests.cpp  MoveTests.cpp  RaceTests.cpp  ReverseCharIteratorTests.cpp  StrcmpTests.cpp  TestStatistics.cpp  ToStringTests.cpp  Utility.cpp  VisitTests.cpp
test/src/include/: Utility.h
